# bobit

./: .gitignore  Cargo.toml  Procfile  readme.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
src/: main.rs
src/commands/: cat.rs  flag.rs  help.rs  meme.rs  mod.rs  music.rs  pfp.rs  rps.rs  say.rs  test.rs
