[package]
name = "bobit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.10.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "framework", "standard_framework"]}
serde_json = "1.0.79"
tokio = {version = "1.17.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"
reqwest = "0.11.10"
image = "0.24.1"
dotenv = "0.15"
